--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,34 @@
-.row {
-  margin:0px;
-  padding:0px;
+.game-container {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding: 100px;
+  background-color: #e2edff;
+  height: 100%;
 }
 
-.cell {
+.row {
+  display:table;
+}
+
+/* .cell {
   width: 100px;
   height: 100px;
-  margin:0px;
-  display: inline-block;
-  border: solid 1px black;
+  /* margin:0px; */
+
+  /* border: solid 1px black;
+} */
+
+.cell {
+  float: left;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  font-size: 3em;
+  font-weight: 100;
+  border: 1px solid black;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
 }
