--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+body {
+  background-color: #e2edff;
+}
+
 .game-container {
   display: flex;
   flex-flow: column;
   align-items: center;
   padding: 100px;
-  background-color: #e2edff;
+  /* background-color: #e2edff; */
   height: 100%;
 }
 
@@ -21,8 +25,8 @@
 
 .cell {
   float: left;
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   line-height: 100px;
   font-size: 3em;
   font-weight: 100;
@@ -31,4 +35,20 @@
   margin-top: -1px;
   padding: 0;
   text-align: center;
+}
+
+.player-label {
+  width: 400px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.player-name {
+  width: 200px;
+  margin: 30px;
+  padding: 30px;
+  display: inline-block;
+  background-color: white;
+  border-radius: 50px;
+  border: outset lightgrey 2px;
 }
